--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
+    "moment": "^2.30.1",
     "quasar": "^2.8.0",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
