--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "quasar": "^2.8.0",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
+    "vue3-charts": "^1.1.33",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
